tests/ui/resolve/issue-26545.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `B` in this scope
  --> $DIR/issue-26545.rs:7:9
   |
LL |         B(());
   |         ^ not found in this scope
   |
help: consider importing this tuple struct
   |
LL +     use foo::B;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
